Fix landing view on mobile

--- a/assets/scss/components/_content.scss
+++ b/assets/scss/components/_content.scss
@@ -27,11 +27,13 @@
   }
   h2 {
     font-family: $font-family-heading;
-    line-height: 1.2;
+    line-height: 1.1;
     font-weight: 400;
     color: $white;
+    font-size: 3rem;
     @include media-breakpoint-up(md) {
-      line-height: 1.4;
+      line-height: 1.3;
+      font-size: 6rem;
     }
   }
   // Subheading
