--- a/assets/scss/pages/index.scss
+++ b/assets/scss/pages/index.scss
@@ -1,10 +1,3 @@
-.title-sensical{
-    font-family: $font-family-sans-serif;
-    font-size: 5rem;
-    @include media-breakpoint-up(lg) {
-        font-size: 6rem;
-    }
-}
 .button {
     background-color: $accent;
     color: $white;
@@ -16,9 +9,6 @@
         color: $accent;
         transition: $transition-base;
     }
-}
-.color-white{
-    color: $white;
 }
 .text-work{
     font-size: 1.2rem;
